pie names are printing

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h3>moooooo</h3>
-
-
+  <div id="pies"></div>
   <script src="main.js"></script>
 </body>
 </html>
