--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <div id="instructor-buttons">
+    <button>All</button>
+    <button id='Zoe'>Zoe</button>
+    <button>Saul</button>
+    <button>Michael</button>
+  </div>
   <div id="pies"></div>
   <script src="main.js"></script>
 </body>
