--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div id="instructor-buttons">
-    <button>All</button>
+    <button id='All'>All</button>
     <button id='Zoe'>Zoe</button>
-    <button>Saul</button>
-    <button>Michael</button>
+    <button id='Saul'>Saul</button>
+    <button id='Michael'>Michael</button>
   </div>
   <div id="pies"></div>
   <script src="main.js"></script>
